# raytracer

./: .gitignore  Cargo.toml  README.md
resources/: simple.glb  simple_terrain.glb  simple_with_camera.glb  suzanne.gltf
src/: gpu.rs  index.html  input.rs  main.rs  scene.rs  shader.wgsl
