[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
pollster = "0.3"
wgpu = "23.0.0"
env_logger = "0.11"
console_error_panic_hook = "0.1.7"
console_log = "1"
js-sys = "0.3.70"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
wasm-bindgen-test = "0.3"
web-sys = "0.3.72"