[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] } # window
pollster = "0.3" # basic blocking async/await support
wgpu = "23.0.0"
env_logger = "0.11"
bytemuck = {version = "1.19.0", features = [ "derive" ] }
glam = {version = "0.29.2", features = [ "bytemuck" ] } # cg math
rand = "0.8.5" # random numbers
gltf = {version = "1.4.1", features = ["KHR_lights_punctual"]} # gltf parser

# web stuff
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
console_log = "1"
js-sys = "0.3.70"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
wasm-bindgen-test = "0.3"
web-sys = {version = "0.3.72", features = ['Headers', 'Request', 'RequestInit', 'RequestMode', 'Response', 'Window']}
web-time = "1.1.0"
